--- a/html/auth/login.html
+++ b/html/auth/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../../images/logo/Student-support.png" type="image/png"> 
+    <link rel="icon" href="https://i.postimg.cc/hvPTCz7M/Student-support.png" type="image/png"> 
     <title>Login - Student Support UMN</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../../css/global.css">
