--- a/html/students/consultation.html
+++ b/html/students/consultation.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../../images/logo/Student-support.png" type="image/png"> 
     <title>Formulir Konsultasi - Student Support UMN</title>
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../../styles.css">
+    <link rel="stylesheet" href="../../css/global.css">
 </head>
 <body>
     <div id="navbar-container"></div>
