--- a/html/students/studentview.html
+++ b/html/students/studentview.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Consultation Status</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="../css/global.css">
-    <link rel="stylesheet" href="../css/navbar.css">
+    <link rel="stylesheet" href="../../css/global.css">
+    <link rel="stylesheet" href="../../css/navbar.css">
+    <link rel="stylesheet" href="../../styles.css">
 
     <style>
         .status-card {
@@ -38,48 +38,77 @@
     </style>
 </head>
 <body>
-    <header class="navbar">
-        <div class="container">
-            <div class="logo-container">
-                <img src="../Student-support.png" alt="Student Support Logo" class="navbar-logo">
-                <img src="../logo-umn-bg-white-09-grey.webp" alt="UMN Logo" class="navbar-logo">
-                <img src="../qs-unggul2-1-1.webp" alt="QS Unggul Logo" class="navbar-logo">
-            </div>
-            <button class="hamburger" aria-label="Toggle menu">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </button>
-            <nav class="nav-menu">
-                <ul>
-                    <li><a href="../index.html#home">Home</a></li>
-                    <li><a href="../index.html#services">Layanan</a></li>
-                    <li><a href="../index.html#booking">Pendaftaran Layanan</a></li>
-                    <li><a href="../index.html#resources">Konselor</a></li>
-                    <li><a href="../index.html#contact">Kontak</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    <div id="navbar-container"></div>
 
     <section class="consultation-form">
         <div class="container py-9">
-  
-        <div class="row mb-4">
-            <div class="col-12 text-center">
-                <img src="../umn.png" alt="UMN Logo" style="max-height:80px;">
-                <h2 class="mt-3">My Consultation Requests</h2>
+            <div class="row mb-4">
+                <div class="col-12 text-center">
+                    <img src="../../images/logo/umn.png" alt="UMN Logo" style="max-height:80px;">
+                    <h2 class="mt-3">My Consultation Requests</h2>
+                </div>
+            </div>
+
+            <div class="row" id="consultationCards">
+                <!-- Consultation cards will be dynamically inserted here -->
             </div>
         </div>
-
-        <div class="row" id="consultationCards">
-            <!-- Consultation cards will be dynamically inserted here -->
-        </div>
-    </div>
     </section>
 
+    <div id="footer-contact-container"></div>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../js/studentview.js"></script>
-    <script src="../script.js"></script>
+    <script>
+        // Load navbar
+        fetch('../components/navbar.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('navbar-container').innerHTML = data;
+                // Initialize hamburger menu after navbar is loaded
+                const hamburger = document.querySelector('.hamburger');
+                const navMenu = document.querySelector('.nav-menu');
+                
+                if (hamburger && navMenu) {
+                    // Toggle menu on hamburger click
+                    hamburger.addEventListener('click', function() {
+                        this.classList.toggle('active');
+                        navMenu.classList.toggle('active');
+                    });
+
+                    // Close menu when clicking menu items
+                    navMenu.querySelectorAll('a').forEach(item => {
+                        item.addEventListener('click', () => {
+                            hamburger.classList.remove('active');
+                            navMenu.classList.remove('active');
+                        });
+                    });
+
+                    // Close menu when clicking outside
+                    document.addEventListener('click', (e) => {
+                        if (!hamburger.contains(e.target) && !navMenu.contains(e.target)) {
+                            hamburger.classList.remove('active');
+                            navMenu.classList.remove('active');
+                        }
+                    });
+                }
+            })
+            .catch(error => console.error('Error loading navbar:', error));
+
+        // Load footer
+        fetch('../components/footer-contact.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('footer-contact-container').innerHTML = data;
+            })
+            .catch(error => console.error('Error loading footer:', error));
+
+        // Check login status
+        document.addEventListener('DOMContentLoaded', function() {
+            requireLogin();
+        });
+    </script>
+    <script src="../../js/auth.js"></script>
+    <script src="../../js/studentview.js"></script>
 </body>
 </html>
