--- a/html/students/studentview.html
+++ b/html/students/studentview.html
@@ -44,7 +44,7 @@
         <div class="container py-9">
             <div class="row mb-4">
                 <div class="col-12 text-center">
-                    <img src="../../images/logo/umn.png" alt="UMN Logo" style="max-height:80px;">
+                    <img src="https://i.postimg.cc/9Fsw-9N1L/umn.png" alt="UMN Logo" style="max-height:120px;">
                     <h2 class="mt-3">My Consultation Requests</h2>
                 </div>
             </div>
