--- a/html/admin/admin.html
+++ b/html/admin/admin.html
@@ -5,35 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Consultation Request</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/admin.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="css/navbar.css">
-    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="../../css/admin.css">
+    <link rel="stylesheet" href="../../styles.css">
+    <link rel="stylesheet" href="../../css/navbar.css">
+    <link rel="stylesheet" href="../../css/global.css">
 </head>
 <body>
-    <header class="navbar">
-        <div class="container">
-            <div class="logo-container">
-                <img src="Student-support.png" alt="Student Support Logo" class="navbar-logo">
-                <img src="logo-umn-bg-white-09-grey.webp" alt="UMN Logo" class="navbar-logo">
-                <img src="qs-unggul2-1-1.webp" alt="QS Unggul Logo" class="navbar-logo">
-            </div>
-            <button class="hamburger" aria-label="Toggle menu">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </button>
-            <nav class="nav-menu">
-                <ul>
-                    <li><a href="admin.html#">Daftar Permintaan</a></li>
-                    <li><a href="#search">Search</a></li>
-                    <li><a href="admin/DaftarRiwayat.html#">Daftar Riwayat</a></li>
-                    <li><a href="">Update Riwayat Konsultasi</a></li>
-                    <li><a href="#" onclick="logout(event)">Logout</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    <div id="navbarmin-container"></div>
 
     <section class="admin-form">
         <div class="container">
@@ -68,7 +46,7 @@
             requireAdmin();
         });
     </script>
-    <script src="js/admin.js"></script>
+    <script src="../../js/admin.js"></script>
 
     <div id="popup-background"></div>
     <div id="popup" class="popup" style="display:none;">
@@ -81,6 +59,47 @@
         <button class="btn btn-success btn-sm">Approve</button>
         <button class="btn btn-danger btn-sm">Contact</button>
     </div>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script>
+        fetch('../components/navbar-admin.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('navbarmin-container').innerHTML = data;
+                // Initialize hamburger menu after navbar is loaded
+                const hamburger = document.querySelector('.hamburger');
+                const navMenu = document.querySelector('.nav-menu');
+                
+                if (hamburger && navMenu) {
+                    // Toggle menu on hamburger click
+                    hamburger.addEventListener('click', function() {
+                        this.classList.toggle('active');
+                        navMenu.classList.toggle('active');
+                    });
+
+                    // Close menu when clicking menu items
+                    navMenu.querySelectorAll('a').forEach(item => {
+                        item.addEventListener('click', () => {
+                            hamburger.classList.remove('active');
+                            navMenu.classList.remove('active');
+                        });
+                    });
+
+                    // Close menu when clicking outside
+                    document.addEventListener('click', (e) => {
+                        if (!hamburger.contains(e.target) && !navMenu.contains(e.target)) {
+                            hamburger.classList.remove('active');
+                            navMenu.classList.remove('active');
+                        }
+                    });
+                }
+            })
+            .catch(error => console.error('Error loading navbar:', error));
+    </script>
+    <script src="../../script.js"></script>
+    <script src="../../js/auth.js"></script>
     
 </body>
 </html>
