--- a/html/auth/login.html
+++ b/html/auth/login.html
@@ -78,6 +78,6 @@
             .catch(error => console.error('Error loading footer:', error));
     </script>
     <script src="../../js/auth.js"></script>
-    <script src="../script.js"></script>
+    <script src="../../script.js"></script>
 </body>
 </html>
